[gd_scene load_steps=17 format=3 uid="uid://hpqycr5ogjb1"]

[ext_resource type="Script" path="res://Game/Goals/study_goals_panel.gd" id="1_o5kcf"]
[ext_resource type="Script" path="res://Game/Goals/Create_Goal_panel.gd" id="2_ngm25"]
[ext_resource type="Texture2D" uid="uid://ixj2bjjmy5x" path="res://Assets/Backgrounds/Clipboard.png" id="2_x7bvx"]
[ext_resource type="Texture2D" uid="uid://ccovdy4qygify" path="res://Assets/Icons/studygoal.png" id="3_amt6u"]
[ext_resource type="PackedScene" uid="uid://ck1v1wt2aq572" path="res://rewards_notification.tscn" id="3_iiscx"]
[ext_resource type="Texture2D" uid="uid://b8f572h7nyjik" path="res://Assets/Button/CreateButton.png" id="4_1cg0p"]
[ext_resource type="Texture2D" uid="uid://de1neevmtiyin" path="res://Assets/Backgrounds/creaetenewgoal.png" id="5_f61kk"]
[ext_resource type="Texture2D" uid="uid://cnwmdqvw7wkr" path="res://Assets/Icons/Untitled_Artwork 3.png" id="6_qjja7"]
[ext_resource type="Texture2D" uid="uid://0d42f2luessp" path="res://Assets/Icons/Untitled_Artwork 5.png" id="7_3yt8r"]
[ext_resource type="PackedScene" uid="uid://cyi0hrshfraqh" path="res://filter_detection.tscn" id="10_lcwho"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_crmfs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ca4fg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r42hm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8pyql"]
bg_color = Color(0.6, 0.6, 0.6, 0.486275)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fiv2j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ubyo"]
bg_color = Color(0.6, 0.6, 0.6, 0.513726)

[node name="Study_Goals_Panel" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -560.0
offset_right = 300.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_o5kcf")

[node name="Background_Shader" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -400.0
offset_right = 240.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.0392157)

[node name="Backgroundf" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -90.0
offset_top = -170.0
offset_right = 2390.0
offset_bottom = 3338.0
scale = Vector2(0.315, 0.315)
texture = ExtResource("2_x7bvx")

[node name="StudyGoal" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = -28.0
offset_right = 515.0
offset_bottom = 127.0
texture = ExtResource("3_amt6u")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 253.0
offset_top = 766.0
offset_right = 343.0
offset_bottom = 807.0
texture = ExtResource("4_1cg0p")
expand_mode = 1

[node name="Create_Button" type="Button" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -40.0
offset_right = 37.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_crmfs")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ca4fg")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 100.0
offset_right = 600.0
offset_bottom = 750.0

[node name="Goal_Container" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Rewards_Notification" parent="." instance=ExtResource("3_iiscx")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -239.0
offset_top = 1241.0
offset_right = -239.0
offset_bottom = 1241.0

[node name="Create_Goal_panel" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 25.0
offset_top = 100.0
offset_right = 575.0
offset_bottom = 400.0
script = ExtResource("2_ngm25")

[node name="TextureRect2" type="TextureRect" parent="Create_Goal_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_f61kk")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Create_Goal_panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 50.0
offset_right = 523.0
offset_bottom = 205.0

[node name="Goal_Label" type="Label" parent="Create_Goal_panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Goal:"

[node name="Goal_Input" type="TextEdit" parent="Create_Goal_panel/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 31)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
placeholder_text = "Your Study Goal"
wrap_mode = 1

[node name="Target Hours_Label" type="Label" parent="Create_Goal_panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Target Hours:
"

[node name="Target_Hours_Input" type="LineEdit" parent="Create_Goal_panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1"
placeholder_text = "1"

[node name="HBoxContainer" type="HBoxContainer" parent="Create_Goal_panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Cancel Texture" type="TextureRect" parent="Create_Goal_panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 31)
layout_mode = 2
texture = ExtResource("6_qjja7")
expand_mode = 1

[node name="Cancel" type="Button" parent="Create_Goal_panel/VBoxContainer/HBoxContainer/Cancel Texture"]
layout_mode = 2
offset_left = -1.0
offset_right = 59.0
offset_bottom = 31.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_r42hm")
theme_override_styles/hover = SubResource("StyleBoxFlat_8pyql")

[node name="Submittexture" type="TextureRect" parent="Create_Goal_panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 2.08165e-12)
layout_mode = 2
texture = ExtResource("7_3yt8r")
expand_mode = 1

[node name="Submit" type="Button" parent="Create_Goal_panel/VBoxContainer/HBoxContainer/Submittexture"]
layout_mode = 2
offset_left = 3.0
offset_top = 3.0
offset_right = 59.0
offset_bottom = 29.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_fiv2j")
theme_override_styles/hover = SubResource("StyleBoxFlat_2ubyo")

[node name="Filter_Detection" parent="." instance=ExtResource("10_lcwho")]
visible = false
layout_mode = 1
offset_left = 307.0
offset_top = 232.0
offset_right = 307.0
offset_bottom = 232.0

[connection signal="gui_input" from="Background_Shader" to="." method="_on_background_shader_gui_input"]
[connection signal="pressed" from="TextureRect2/Create_Button" to="." method="_on_create_button_pressed"]
[connection signal="text_changed" from="Create_Goal_panel/VBoxContainer/Goal_Input" to="Create_Goal_panel" method="_on_goal_input_text_changed"]
[connection signal="text_changed" from="Create_Goal_panel/VBoxContainer/Target_Hours_Input" to="Create_Goal_panel" method="_on_target_hours_input_text_changed"]
[connection signal="pressed" from="Create_Goal_panel/VBoxContainer/HBoxContainer/Cancel Texture/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Create_Goal_panel/VBoxContainer/HBoxContainer/Submittexture/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="Create_Goal_panel/VBoxContainer/HBoxContainer/Submittexture/Submit" to="Create_Goal_panel" method="_on_submit_pressed"]
